--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,12 @@
-# OpenAI API Key (for embeddings)
-OPENAI_API_KEY=your_openai_api_key_here
+# Jina API Key (for embeddings)
+JINA_API_KEY=your_jina_api_key_here
+JINA_EMBED_MODEL=jina-embeddings-v3
+JINA_EMBED_DIM=1024
 
 # Pinecone Configuration
 PINECONE_API_KEY=your_pinecone_api_key_here
-PINECONE_ENVIRONMENT=your_pinecone_environment_here
 PINECONE_INDEX_NAME=mini-rag-index
+PINECONE_DIMENSION=1024
 
 # Jina Reranker API Key
 JINA_API_KEY=your_jina_api_key_here
