--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-# Jina API Key (for embeddings)
+# Jina API Key (for embeddings and reranking)
 JINA_API_KEY=your_jina_api_key_here
 JINA_EMBED_MODEL=jina-embeddings-v3
 JINA_EMBED_DIM=1024
@@ -8,9 +8,6 @@ PINECONE_API_KEY=your_pinecone_api_key_here
 PINECONE_INDEX_NAME=mini-rag-index
 PINECONE_DIMENSION=1024
 
-# Jina Reranker API Key
-JINA_API_KEY=your_jina_api_key_here
-
 # Groq API Key (for LLM)
 GROQ_API_KEY=your_groq_api_key_here
 
@@ -18,4 +15,5 @@ GROQ_API_KEY=your_groq_api_key_here
 CHUNK_SIZE=1000
 CHUNK_OVERLAP=120
 RETRIEVAL_TOP_K=20
+RERANK_TOP_K=5
 RERANK_TOP_K=5
